==> adamgreen/mri-swd/Adafruit_SSD1306/Adafruit_SSD1306.cpp <==
#define HIGH 1
#define LOW 0
#include "Adafruit_SSD1306.h"
#include "splash.h"
#include <hardware/gpio.h>
#include <pico/stdlib.h>
#include <string.h>
#define ssd1306_swap(a, b)                                                     \
  (((a) ^= (b)), ((b) ^= (a)), ((a) ^= (b))) ///< No-temp-var swap operation
#define SSD1306_SELECT gpio_put(csPin, LOW);       ///< Device select
#define SSD1306_DESELECT gpio_put(csPin, HIGH);    ///< Device deselect
#define SSD1306_MODE_COMMAND gpio_put(dcPin, LOW); ///< Command mode
#define SSD1306_MODE_DATA gpio_put(dcPin, HIGH);   ///< Data mode
#define SPI_TRANSACTION_START ///< Dummy stand-in define
#define SPI_TRANSACTION_END   ///< keeps compiler happy
#define TRANSACTION_START                                                      \
   {                                                                     \
    SSD1306_SELECT;                                                            \
  } ///< Wire, SPI or bitbang transfer setup
#define TRANSACTION_END                                                        \
  {                                                                     \
    SSD1306_DESELECT;                                                          \
  } ///< Wire, SPI or bitbang transfer end

inline void Adafruit_SSD1306::SPIwrite(uint8_t d)
{
    spi_write_blocking(m_pSPI, &d, 1);
}

void Adafruit_SSD1306::ssd1306_commandList(const uint8_t *p, uint8_t n)
{
    SSD1306_MODE_COMMAND
    spi_write_blocking(m_pSPI, p, n);
}

bool Adafruit_SSD1306::begin(bool reset, bool periphBegin)
{
    // Verify that pins map to the same SPI peripheral instance.
    int8_t clkInstance = clkPin & 0x8;
    int8_t mosiInstance = mosiPin & 0x8;
    assert ( clkInstance == mosiInstance );
    // Verify that pin functions can be mapped to needed SPI funnctionality.
    assert ( (clkPin & 0x3) == 2 );
    assert ( (mosiPin & 0x3) == 3 );

    if ((!buffer) && !(buffer = (uint8_t *)malloc(WIDTH * ((HEIGHT + 7) / 8))))
    {
        return false;
    }

    clearDisplay();

#ifndef SSD1306_NO_SPLASH
    if (HEIGHT > 32)
    {
        drawBitmap((WIDTH - splash1_width) / 2, (HEIGHT - splash1_height) / 2,
                    splash1_data, splash1_width, splash1_height, 1);
    }
    else
    {
        drawBitmap((WIDTH - splash2_width) / 2, (HEIGHT - splash2_height) / 2,
                    splash2_data, splash2_width, splash2_height, 1);
    }
#endif

    m_pSPI = clkInstance ? spi1 : spi0;
    spi_init(m_pSPI, 10000000);
    spi_set_format(m_pSPI, 8, SPI_CPOL_1, SPI_CPHA_0, SPI_MSB_FIRST);
    gpio_set_function(clkPin, GPIO_FUNC_SPI);
    gpio_set_function(mosiPin, GPIO_FUNC_SPI);

    // Init CS and DC to high state.
    gpio_put(dcPin, HIGH);
    gpio_put(csPin, HIGH);
    gpio_set_dir(dcPin, true);
    gpio_set_dir(csPin, true);
    gpio_set_function(dcPin, GPIO_FUNC_SIO);
    gpio_set_function(csPin, GPIO_FUNC_SIO);

    // Reset SSD1306 if requested and reset pin specified in constructor
    if (reset && (rstPin >= 0))
    {
        gpio_put(rstPin, HIGH);
        gpio_set_dir(rstPin, true);
        gpio_set_function(rstPin, GPIO_FUNC_SIO);
        sleep_ms(1);                   // VDD goes high at start, pause for 1 ms
        gpio_put(rstPin, LOW);  // Bring reset low
        sleep_ms(10);                  // Wait 10 ms
        gpio_put(rstPin, HIGH); // Bring out of reset
    }

    TRANSACTION_START

    // Init sequence
    static const uint8_t init1[] = {SSD1306_DISPLAYOFF,         // 0xAE
                                    SSD1306_SETDISPLAYCLOCKDIV, // 0xD5
                                    0x80, // the suggested ratio 0x80
                                    SSD1306_SETMULTIPLEX}; // 0xA8
    ssd1306_commandList(init1, sizeof(init1));
    ssd1306_command1(HEIGHT - 1);

    static const uint8_t init2[] = {SSD1306_SETDISPLAYOFFSET, // 0xD3
                                    0x0,                      // no offset
                                    SSD1306_SETSTARTLINE | 0x0, // line #0
                                    SSD1306_CHARGEPUMP};        // 0x8D
    ssd1306_commandList(init2, sizeof(init2));

    ssd1306_command1((vccstate == SSD1306_EXTERNALVCC) ? 0x10 : 0x14);

    static const uint8_t init3[] = {SSD1306_MEMORYMODE, // 0x20
                                    0x00, // 0x0 act like ks0108
                                    SSD1306_SEGREMAP | 0x1,
                                    SSD1306_COMSCANDEC};
    ssd1306_commandList(init3, sizeof(init3));

    uint8_t comPins = 0x02;
    contrast = 0x8F;

    if ((WIDTH == 128) && (HEIGHT == 32))
    {
        comPins = 0x02;
        contrast = 0x8F;
    }
    else if ((WIDTH == 128) && (HEIGHT == 64))
    {
        comPins = 0x12;
        contrast = (vccstate == SSD1306_EXTERNALVCC) ? 0x9F : 0xCF;
    }
    else if ((WIDTH == 96) && (HEIGHT == 16))
    {
        comPins = 0x2; // ada x12
        contrast = (vccstate == SSD1306_EXTERNALVCC) ? 0x10 : 0xAF;
    }
    else
    {
        // Other screen varieties -- TBD
    }

    ssd1306_command1(SSD1306_SETCOMPINS);
    ssd1306_command1(comPins);
    ssd1306_command1(SSD1306_SETCONTRAST);
    ssd1306_command1(contrast);

    ssd1306_command1(SSD1306_SETPRECHARGE); // 0xd9
    ssd1306_command1((vccstate == SSD1306_EXTERNALVCC) ? 0x22 : 0xF1);
    static const uint8_t init5[] = {
        SSD1306_SETVCOMDETECT, // 0xDB
        0x40,
        SSD1306_DISPLAYALLON_RESUME, // 0xA4
        SSD1306_NORMALDISPLAY,       // 0xA6
        SSD1306_DEACTIVATE_SCROLL,
        SSD1306_DISPLAYON // Main screen turn on
    };
    ssd1306_commandList(init5, sizeof(init5));

    TRANSACTION_END

    return true; // Success
}

void Adafruit_SSD1306::display(void)
{
    TRANSACTION_START
    static const uint8_t dlist1[] =
    {
        SSD1306_PAGEADDR,
        0,                      // Page start address
        0xFF,                   // Page end (not really, but works here)
        SSD1306_COLUMNADDR, 0   // Column start address
    };
    ssd1306_commandList(dlist1, sizeof(dlist1));
    ssd1306_command1(WIDTH - 1); // Column end address

    uint16_t count = WIDTH * ((HEIGHT + 7) / 8);
    uint8_t *ptr = buffer;
    SSD1306_MODE_DATA
    spi_write_blocking(m_pSPI, ptr, count);
    TRANSACTION_END
}
